--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "EppoEngine/Vendor/glm"]
 	path = EppoEngine/Vendor/glm
 	url = https://github.com/nepp95/glm.git
+[submodule "EppoEngine/Vendor/spdlog"]
+	path = EppoEngine/Vendor/spdlog
+	url = https://github.com/nepp95/spdlog.git
