--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "EppoEngine/Vendor/spdlog"]
 	path = EppoEngine/Vendor/spdlog
 	url = https://github.com/nepp95/spdlog.git
+[submodule "EppoEngine/Vendor/tracy"]
+	path = EppoEngine/Vendor/tracy
+	url = https://github.com/wolfpld/tracy.git
