--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -3,8 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Hello]
-Pos=197,158
-Size=286,170
+[Window][Viewport]
+Pos=322,220
+Size=837,483
 Collapsed=0
 
