--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -4,7 +4,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=322,220
-Size=837,483
+Pos=354,19
+Size=1246,881
 Collapsed=0
+DockId=0x00000004,0
+
+[Window][DockSpace]
+Pos=0,0
+Size=1600,900
+Collapsed=0
+
+[Window][Settings]
+Pos=0,19
+Size=352,881
+Collapsed=0
+DockId=0x00000001,0
+
+[Docking][Data]
+DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0x09EF459F SizeRef=352,881 Selected=0x54723243
+  DockNode  ID=0x00000004 Parent=0x09EF459F SizeRef=1246,881 CentralNode=1 Selected=0x13926F0B
 
