--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "EppoEngine/Vendor/entt"]
 	path = EppoEngine/Vendor/entt
 	url = https://github.com/nepp95/entt.git
+[submodule "EppoEngine/Vendor/yaml-cpp"]
+	path = EppoEngine/Vendor/yaml-cpp
+	url = https://github.com/nepp95/yaml-cpp.git
