--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -1,27 +1,35 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
-[Window][Viewport]
-Pos=372,19
-Size=1228,881
-Collapsed=0
-DockId=0x00000004,0
-
 [Window][DockSpace]
 Pos=0,0
 Size=1600,900
 Collapsed=0
 
-[Window][Settings]
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
+
+[Window][Scene Hierarchy]
 Pos=0,19
-Size=370,881
+Size=337,881
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Settings]
+Pos=1248,19
+Size=352,881
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Viewport]
+Pos=339,19
+Size=907,881
 Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=86,128 Size=1600,881 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x09EF459F SizeRef=370,881 Selected=0x54723243
-  DockNode  ID=0x00000004 Parent=0x09EF459F SizeRef=1228,881 CentralNode=1 Selected=0x13926F0B
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=216,191 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x09EF459F SizeRef=337,881 Selected=0x2E9237F7
+  DockNode    ID=0x00000004 Parent=0x09EF459F SizeRef=1261,881 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=907,881 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=352,881 Selected=0x54723243
 
