--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -10,9 +10,9 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=337,881
+Size=337,453
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Settings]
 Pos=1248,19
@@ -26,9 +26,17 @@ Size=907,881
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Properties]
+Pos=0,474
+Size=337,426
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=216,191 Size=1600,881 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x09EF459F SizeRef=337,881 Selected=0x2E9237F7
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=60,102 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x09EF459F SizeRef=337,881 Split=Y Selected=0x2E9237F7
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=337,453 Selected=0x2E9237F7
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=337,426 Selected=0x199AB496
   DockNode    ID=0x00000004 Parent=0x09EF459F SizeRef=1261,881 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=907,881 CentralNode=1 Selected=0x13926F0B
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=352,881 Selected=0x54723243
