First testing suite added

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "EppoEngine/Vendor/yaml-cpp"]
 	path = EppoEngine/Vendor/yaml-cpp
 	url = https://github.com/nepp95/yaml-cpp.git
+[submodule "EppoEngine/Vendor/googletest"]
+	path = EppoEngine/Vendor/googletest
+	url = https://github.com/nepp95/googletest.git
