--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,6 @@ jobs:
           submodules: recursive
 
       - name: Setup Premake
-        if: steps.premake-cache.outputs.cache-hit != 'true'
         uses: abel0b/setup-premake@v2.3
         with:
           version: "5.0.0-beta2"
@@ -27,6 +26,21 @@ jobs:
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
+      
+      - name: Cache Vulkan SDK
+        id: cache-vulkan-sdk
+        uses: actions/cache@v3
+        with:
+          path: "C:\\VulkanSDK\\1.3.261.1"
+          key: vulkan-sdk-1.3.261.1
+      
+      - name: Setup Vulkan
+        if: steps.cache-vulkan-sdk.outputs.cache-hit != 'true'
+        run: |
+          Invoke-WebRequest -Uri "https://sdk.lunarg.com/sdk/download/1.3.261.1/windows/VulkanSDK-1.3.261.1-Installer.exe" -OutFile VulkanSDK.exe
+          $installer = Start-Process -FilePath VulkanSDK.exe -Wait -PassThru -ArgumentList "--accept-licenses --default-answer --confirm-command install";
+          $installer.WaitForExit();
+          Remove-Item "VulkanSDK.exe" -Force
       
       - name: Run Premake
         working-directory: ${{env.GITHUB_WORKSPACE}}
