--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  build-debug:
-    name: "Build"
+  setup:
     runs-on: [ self-hosted, windows ]
+    name: "Setup"
 
     steps:
       - name: Checkout repository
@@ -45,12 +45,30 @@ jobs:
       - name: Run Premake
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: Vendor/Premake/Bin/Premake5.exe vs2022
-      
-      - name: Build (Debug)
+
+  build-debug:
+    runs-on: [ self-hosted, windows ]
+    name: "Build and Test (Debug)"
+    needs: setup
+
+    steps:
+      - name: Build
         run: msbuild /m /p:Configuration=Debug EppoEngine.sln
       
-      - name: Build (Release)
+  build-release:
+    runs-on: [ self-hosted, windows ]
+    name: "Build and Test (Release)"
+    needs: setup
+
+    steps:
+      - name: Build
         run: msbuild /m /p:Configuration=Release EppoEngine.sln
-      
-      - name: Build (Dist)
+  
+  build-dist:
+    runs-on: [ self-hosted, windows ]
+    name: "Build and Test (Dist)"
+    needs: setup
+
+    steps:
+      - name: Build
         run: msbuild /m /p:Configuration=Dist EppoEngine.sln
