--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,20 +27,19 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
       
-      - name: Cache Vulkan SDK
-        id: cache-vulkan-sdk
-        uses: actions/cache@v3
+      - name: Setup VulkanSDK
+        uses: humbletim/setup-vulkan-sdk@v1.2.0
         with:
-          path: "C:\\VulkanSDK\\1.3.261.1"
-          key: vulkan-sdk-1.3.261.1
+          vulkan-query-version: 1.3.261.1
+          vulkan-use-cache: true
       
-      - name: Setup Vulkan
-        if: steps.cache-vulkan-sdk.outputs.cache-hit != 'true'
-        run: |
-          Invoke-WebRequest -Uri "https://sdk.lunarg.com/sdk/download/1.3.261.1/windows/VulkanSDK-1.3.261.1-Installer.exe" -OutFile VulkanSDK.exe
-          $installer = Start-Process -FilePath VulkanSDK.exe -Wait -PassThru -ArgumentList "--accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.debug";
-          $installer.WaitForExit();
-          Remove-Item "VulkanSDK.exe" -Force
+      # - name: Setup Vulkan
+      #   if: steps.cache-vulkan-sdk.outputs.cache-hit != 'true'
+      #   run: |
+      #     Invoke-WebRequest -Uri "https://sdk.lunarg.com/sdk/download/1.3.261.1/windows/VulkanSDK-1.3.261.1-Installer.exe" -OutFile VulkanSDK.exe
+      #     $installer = Start-Process -FilePath VulkanSDK.exe -Wait -PassThru -ArgumentList "--accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.debug";
+      #     $installer.WaitForExit();
+      #     Remove-Item "VulkanSDK.exe" -Force
       
       - name: Run Premake
         working-directory: ${{env.GITHUB_WORKSPACE}}
