--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: "Test (Debug)"
         working-directory: ${{env.GITHUB_WORKSPACE}}
         shell: cmd
-        run: Bin/Release-windows-x86_64/EppoTesting/EppoTesting.exe
+        run: .\Bin\Debug-windows-x86_64\EppoTesting\EppoTesting.exe
       
       - name: "Build and Test (Release)"
         run: msbuild /m /p:Configuration=Release EppoEngine.sln
