--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  build:
+  debug:
     runs-on: [ self-hosted, windows ]
     name: "Build and Test (Debug)"
 
@@ -35,3 +35,9 @@ jobs:
 
       - name: "Test (Debug)"
         run: .\Bin\Debug-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
+      
+      - name: "Save test output"
+        uses: actions/upload-artifact@v4
+        with:
+          name: TestOutput-${{env.GITHUB_SHA}}
+          path: ${{env.RUNNER_TEMP}}/testoutput.xml
