--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,5 +39,73 @@ jobs:
       - name: "Save test output"
         uses: actions/upload-artifact@v4
         with:
-          name: TestOutput-${{env.GITHUB_SHA}}
+          name: TestOutput-Debug
+          path: ${{env.RUNNER_TEMP}}/testoutput.xml
+  
+  release:
+    runs-on: [ self-hosted, windows ]
+    name: "Build and Test (Release)"
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Setup Premake
+        uses: abel0b/setup-premake@v2.3
+        with:
+          version: "5.0.0-beta2"
+          path: Vendor/Premake/Bin
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.3.1
+      
+      - name: Run Premake
+        run: .\Vendor\Premake\Bin\Premake5.exe vs2022
+
+      - name: "Build (Release)"
+        run: msbuild /m /p:Configuration=Release EppoEngine.sln
+
+      - name: "Test (Release)"
+        run: .\Bin\Release-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
+      
+      - name: "Save test output"
+        uses: actions/upload-artifact@v4
+        with:
+          name: TestOutput-Release
+          path: ${{env.RUNNER_TEMP}}/testoutput.xml
+
+  dist:
+    runs-on: [ self-hosted, windows ]
+    name: "Build and Test (Dist)"
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Setup Premake
+        uses: abel0b/setup-premake@v2.3
+        with:
+          version: "5.0.0-beta2"
+          path: Vendor/Premake/Bin
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.3.1
+      
+      - name: Run Premake
+        run: .\Vendor\Premake\Bin\Premake5.exe vs2022
+
+      - name: "Build (Dist)"
+        run: msbuild /m /p:Configuration=Dist EppoEngine.sln
+
+      - name: "Test (Dist)"
+        run: .\Bin\Dist-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
+      
+      - name: "Save test output"
+        uses: actions/upload-artifact@v4
+        with:
+          name: TestOutput-Dist
           path: ${{env.RUNNER_TEMP}}/testoutput.xml
