--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -9,10 +9,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=305,20
-Size=976,587
+Pos=305,54
+Size=976,553
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000A,0
 
 [Window][Scene Hierarchy]
 Pos=0,20
@@ -38,14 +38,22 @@ Size=1295,291
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Scene Control]
+Pos=305,20
+Size=976,32
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=216,192 Size=1600,880 Split=X
-  DockNode      ID=0x00000005 Parent=0x09EF459F SizeRef=303,881 Split=Y Selected=0x2E9237F7
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=303,441 Selected=0x2E9237F7
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=303,438 Selected=0x199AB496
-  DockNode      ID=0x00000006 Parent=0x09EF459F SizeRef=1295,881 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1600,588 Split=X
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=976,881 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=317,881 Selected=0x60B79D0E
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1600,291 Selected=0x1A4A3508
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=109,93 Size=1600,880 Split=X
+  DockNode        ID=0x00000005 Parent=0x09EF459F SizeRef=303,881 Split=Y Selected=0x2E9237F7
+    DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=303,441 Selected=0x2E9237F7
+    DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=303,438 Selected=0x199AB496
+  DockNode        ID=0x00000006 Parent=0x09EF459F SizeRef=1295,881 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000006 SizeRef=1600,588 Split=X
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=976,881 Split=Y Selected=0x13926F0B
+        DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=976,32 HiddenTabBar=1 Selected=0x5811277B
+        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=976,553 CentralNode=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=317,881 Selected=0x60B79D0E
+    DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=1600,291 Selected=0x1A4A3508
 
