--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /Vendor/Premake
 /EppoEditor/Resources/Scripts
 /EppoEditor/Scripts/Intermediates
+/EppoEditor/Projects/Assets/Scripts/Binaries
+/EppoEditor/Projects/Assets/Scripts/Intermediates
 
 # Cache
 /EppoEditor/Resources/Shaders/Cache
