--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -26,6 +26,11 @@ jobs:
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
+
+      - name: Setup VulkanSDK
+        uses: NcStudios/VulkanCI@v1.1
+        with:
+          sdkVersion: 1.3.275.0
       
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
