--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -69,8 +69,11 @@ jobs:
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
 
-      - name: Echo
-        run: cat "EppoEngine/EppoEngine.vcxproj"
+      - name: "Save workflow output"
+        uses: actions/upload-artifact@v3
+        with: 
+          name: Workflow output
+          path: "EppoEngine/EppoEngine.vcxproj"
 
       - name: "Build"
         run: msbuild /m /p:Configuration=Release EppoEngine.sln
