--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -27,10 +27,8 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
 
-      - name: Setup VulkanSDK
-        uses: NcStudios/VulkanCI@v1.1
-        with:
-          sdkVersion: 1.3.275.0
+      - name: Setup Vulkan SDK
+        uses: humbletim/setup-vulkan-sdk@v1.2.0
       
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
