--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with: 
           name: Workflow output
-          path: "EppoEngine/EppoEngine.vcxproj"
+          path: "VULKAN_SDK"
 
       - name: "Build"
         run: msbuild /m /p:Configuration=Debug EppoEngine.sln
