--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -31,7 +31,7 @@ jobs:
         uses: humbletim/setup-vulkan-sdk@v1.2.0
         with:
           vulkan-query-version: 1.3.275.0
-          vulkan-components: 'Vulkan-Headers Vulkan-Loader SPIRV-Headers'
+          vulkan-components: 'Vulkan-Headers Vulkan-Loader SPIRV-Headers SPIRV-Cross'
           vulkan-use-cache: false
       
       - name: Run Premake
