--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -27,12 +27,11 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
 
-      - name: Setup Vulkan SDK
-        uses: humbletim/setup-vulkan-sdk@v1.2.0
+      - name: Install Vulkan SDK
+        uses: humbletim/install-vulkan-sdk@v1.1.1
         with:
-          vulkan-query-version: 1.3.275.0
-          vulkan-components: 'Vulkan-Headers Vulkan-Loader SPIRV-Headers SPIRV-Cross'
-          vulkan-use-cache: false
+          version: 1.3.275.0
+          cache: false
       
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
