--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with: 
           name: Workflow output
-          path: "VULKAN_SDK"
+          path: .
 
       - name: "Build"
         run: msbuild /m /p:Configuration=Debug EppoEngine.sln
