--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -31,11 +31,12 @@ jobs:
 
       - name: Download VulkanSDK
         shell: pwsh
-        run: Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/1.3.275.0/windows/VulkanSDK-1.3.275.0-Installer.exe -OutFile VulkanSDK.exe
+        run: Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/1.3.275.0/windows/VulkanSDK-1.3.275.0-Installer.exe -OutFile VulkanSDK.exe |
+          .\VulkanSDK.exe --accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.debug
       
       - name: Install VulkanSDK
         shell: pwsh
-        run: .\VulkanSDK.exe --accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.debug
+        run: 
       
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
