--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -29,7 +29,15 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
 
+      - name: Cache VulkanSDK
+        id: cache-vulkansdk
+        uses: actions/cache@v4
+        with:
+          path: "C:/VulkanSDK"
+          key: vulkansdk
+
       - name: Download and Install VulkanSDK
+        if: steps.cache-vulkansdk.outputs.cache-hit != 'true'
         shell: pwsh
         run: |
           Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/1.3.275.0/windows/VulkanSDK-1.3.275.0-Installer.exe -OutFile VulkanSDK.exe
