--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -8,10 +8,12 @@ on:
     branches: [ develop ]
 
 jobs:
-  debug:
-    runs-on: [ self-hosted, windows ]
-    name: "Build and Test (Debug)"
-
+  config-matrix:
+    runs-on: [ windows-latest ]
+    name: "Build and Test"
+    strategy:
+      matrix:
+        config: [ Debug, Release, Dist ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,86 +28,32 @@ jobs:
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
+
+      - name: Cache VulkanSDK
+        id: cache-vulkansdk
+        uses: actions/cache@v4
+        with:
+          path: "C:/VulkanSDK"
+          key: vulkansdk
+
+      - name: Download and Install VulkanSDK
+        if: steps.cache-vulkansdk.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/1.3.275.0/windows/VulkanSDK-1.3.275.0-Installer.exe -OutFile VulkanSDK.exe
+          .\VulkanSDK.exe --accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.debug
       
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
 
       - name: "Build"
-        run: msbuild /m /p:Configuration=Debug EppoEngine.sln
+        run: msbuild /m /p:Configuration=${{ matrix.config }} EppoEngine.sln
 
       - name: "Test"
-        run: .\Bin\Debug-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
+        run: .\Bin\${{ matrix.config }}-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
       
       - name: "Save test output"
         uses: actions/upload-artifact@v3
         with:
-          name: TestOutput-Debug
-          path: ${{env.RUNNER_TEMP}}/testoutput.xml
-        
-  release:
-    runs-on: [ self-hosted, windows ]
-    name: "Build and Test (Release)"
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup Premake
-        uses: abel0b/setup-premake@v2.3
-        with:
-          version: "5.0.0-beta2"
-          path: Vendor/Premake/Bin
-
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.3.1
-      
-      - name: Run Premake
-        run: .\Vendor\Premake\Bin\Premake5.exe vs2022
-
-      - name: "Build"
-        run: msbuild /m /p:Configuration=Release EppoEngine.sln
-
-      - name: "Test"
-        run: .\Bin\Release-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
-      
-      - name: "Save test output"
-        uses: actions/upload-artifact@v3
-        with:
-          name: TestOutput-Release
-          path: ${{env.RUNNER_TEMP}}/testoutput.xml
-
-  dist:
-    runs-on: [ self-hosted, windows ]
-    name: "Build and Test (Dist)"
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup Premake
-        uses: abel0b/setup-premake@v2.3
-        with:
-          version: "5.0.0-beta2"
-          path: Vendor/Premake/Bin
-
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.3.1
-      
-      - name: Run Premake
-        run: .\Vendor\Premake\Bin\Premake5.exe vs2022
-
-      - name: "Build"
-        run: msbuild /m /p:Configuration=Dist EppoEngine.sln
-
-      - name: "Test"
-        run: .\Bin\Dist-windows-x86_64\EppoTesting\EppoTesting.exe --gtest_output="xml:${{env.RUNNER_TEMP}}\testoutput.xml"
-      
-      - name: "Save test output"
-        uses: actions/upload-artifact@v3
-        with:
-          name: TestOutput-Dist
+          name: TestOutput-${{ matrix.config }}
           path: ${{env.RUNNER_TEMP}}/testoutput.xml
