--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Makefile
 /EppoEditor/Resources/Scripts
 /EppoEditor/Scripts/Intermediates
 /EppoEditor/Projects/*/Assets/Scripts/Binaries
+/EppoEditor/Projects/*/Assets/Scripts/Intermediates
 
 # Cache
 /EppoEditor/Resources/Shaders/Cache
