--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -12,29 +12,56 @@ Collapsed=0
 Pos=305,54
 Size=976,553
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Scene Hierarchy]
 Pos=0,20
 Size=303,440
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Properties]
 Pos=0,462
 Size=303,438
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Performance]
 Pos=1283,20
-Size=317,587
+Size=317,330
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Content Browser Panel]
 Pos=305,609
-Size=1295,291
+Size=976,291
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene Control]
 Pos=305,20
 Size=976,32
 Collapsed=0
+DockId=0x00000009,0
+
+[Window][Shadow Maps]
+Pos=1283,352
+Size=317,548
+Collapsed=0
+DockId=0x00000008,0
+
+[Docking][Data]
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=25,70 Size=1600,880 Split=X
+  DockNode        ID=0x0000000B Parent=0x09EF459F SizeRef=1281,880 Split=X
+    DockNode      ID=0x00000005 Parent=0x0000000B SizeRef=303,881 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=303,441 Selected=0x2E9237F7
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=303,438 Selected=0x199AB496
+    DockNode      ID=0x00000006 Parent=0x0000000B SizeRef=1295,881 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1600,588 Split=Y
+        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=976,32 HiddenTabBar=1 Selected=0x5811277B
+        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=976,553 CentralNode=1 Selected=0x13926F0B
+      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1600,291 Selected=0x1A4A3508
+  DockNode        ID=0x0000000C Parent=0x09EF459F SizeRef=317,880 Split=Y Selected=0xD841E954
+    DockNode      ID=0x00000007 Parent=0x0000000C SizeRef=317,330 Selected=0x60B79D0E
+    DockNode      ID=0x00000008 Parent=0x0000000C SizeRef=317,548 Selected=0xD841E954
 
