--- a/EppoEditor/imgui.ini
+++ b/EppoEditor/imgui.ini
@@ -28,9 +28,9 @@ DockId=0x00000004,0
 
 [Window][Performance]
 Pos=1283,20
-Size=317,347
+Size=317,390
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000D,0
 
 [Window][Content Browser Panel]
 Pos=305,609
@@ -50,6 +50,12 @@ Size=317,531
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Debug Maps]
+Pos=1283,412
+Size=317,488
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=25,70 Size=1600,880 Split=X
   DockNode        ID=0x0000000B Parent=0x09EF459F SizeRef=1281,880 Split=X
@@ -62,6 +68,8 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=25,70 Size=1600,880 Split=
         DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=976,553 CentralNode=1 Selected=0x13926F0B
       DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1600,291 Selected=0x1A4A3508
   DockNode        ID=0x0000000C Parent=0x09EF459F SizeRef=317,880 Split=Y Selected=0xD841E954
-    DockNode      ID=0x00000007 Parent=0x0000000C SizeRef=317,347 Selected=0x60B79D0E
+    DockNode      ID=0x00000007 Parent=0x0000000C SizeRef=317,347 Split=Y Selected=0x60B79D0E
+      DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=317,390 Selected=0x60B79D0E
+      DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=317,488 Selected=0xE22F261B
     DockNode      ID=0x00000008 Parent=0x0000000C SizeRef=317,531 Selected=0xD841E954
 
