--- a/.github/workflows/sonarcube.yml
+++ b/.github/workflows/sonarcube.yml
@@ -33,6 +33,20 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
 
+      - name: Cache VulkanSDK
+        id: cache-vulkansdk
+        uses: actions/cache@v4
+        with:
+          path: "C:/VulkanSDK"
+          key: vulkansdk
+
+      - name: Download and Install VulkanSDK
+        if: steps.cache-vulkansdk.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/1.3.275.0/windows/VulkanSDK-1.3.275.0-Installer.exe -OutFile VulkanSDK.exe
+          .\VulkanSDK.exe --accept-licenses --default-answer --confirm-command install com.lunarg.vulkan.debug
+
       - name: Run Premake
         run: .\Vendor\Premake\Bin\Premake5.exe vs2022
 
