--- a/.github/workflows/sonarcube.yml
+++ b/.github/workflows/sonarcube.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Setup gcovr
         run: |
-          pip install gcovr==5.0
+          pip install gcovr
 
       - name: Cache VulkanSDK
         id: cache-vulkansdk
