--- a/.github/workflows/sonarcube.yml
+++ b/.github/workflows/sonarcube.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Run gcovr
         run: |
-          gcovr --sonarcube ${{ env.RUNNER_TEMP }}\testoutput.xml
+          gcovr --sonarqube ${{ env.RUNNER_TEMP }}\testoutput.xml
 
       - name: Run sonar-scanner
         env:
