--- a/.github/workflows/sonarcube.yml
+++ b/.github/workflows/sonarcube.yml
@@ -69,12 +69,12 @@ jobs:
 
       - name: Run gcovr
         run: |
-          gcovr --sonarqube ${{ env.RUNNER_TEMP }}\testoutput.junit.xml
+          gcovr --sonarqube ${{ env.RUNNER_TEMP }}\testoutput.junit.xml > coverage.xml
 
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          sonar-scanner --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json" --define sonar.coverageReportPaths=${{ env.RUNNER_TEMP }}\testoutput.junit.xml
+          sonar-scanner --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json" --define sonar.coverageReportPaths=coverage.xml
         
